Slight refactoring and code improvements based on IntelliJ warnings